# shopify_csr_chatbot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tutorial.ipynb
src/: constants.py  ingest.py  query.py  utils.py  vectorstore.py
